--- a/HealNexus/Frontend/package.json
+++ b/HealNexus/Frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "axios": "^1.7.7",
+    "babel-preset-vite": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
