Testing using JEST Library for Authentication (Unit Testing)

--- a/HealNexus/Backend/jest.config.json
+++ b/HealNexus/Backend/jest.config.json
@@ -1,5 +1,8 @@
 {
     "collectCoverage": true,
     "testEnvironment": "node",
-    "transform": {}
+    "testTimeout": 10000,
+    "transform": {
+        "^.+\\.jsx?$": "babel-jest"
+    }
 }
