--- a/HealNexus/Backend/package.json
+++ b/HealNexus/Backend/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "axios": "^1.7.7",
+    "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.2",
     "nodemon": "^3.1.7",
